fix: :bug: some fixes on cart quantity