@@ -1,87 +1,62 @@
 package com.ecommerce.api.dto.common;
 
 import org.springframework.data.domain.Page;
+import lombok.Getter;
 import lombok.NoArgsConstructor;
+import lombok.Setter;
 import java.util.List;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
+@Getter
+@Setter
 @NoArgsConstructor
-
 public class PaginatedResponse<T> {
     private List<T> items;
-    private int page;
-    private int size;
+    private int currentPage;
+    private int pageSize;
     private long totalItems;
     private int totalPages;
     private boolean hasNext;
-    private boolean hasPrev;
+    private boolean hasPrevious;
+    private boolean isFirst;
+    private boolean isLast;
 
-    public List<T> getItems() {
-        return items;
-    }
-
-    public void setItems(List<T> items) {
+    public PaginatedResponse(List<T> items, int currentPage, int pageSize, long totalItems,
+            int totalPages, boolean hasNext, boolean hasPrevious, boolean isFirst, boolean isLast) {
         this.items = items;
-    }
-
-    public int getPage() {
-        return page;
-    }
-
-    public void setPage(int page) {
-        this.page = page;
-    }
-
-    public int getSize() {
-        return size;
-    }
-
-    public void setSize(int size) {
-        this.size = size;
-    }
-
-    public long getTotalItems() {
-        return totalItems;
-    }
-
-    public void setTotalItems(long totalItems) {
+        this.currentPage = currentPage;
+        this.pageSize = pageSize;
         this.totalItems = totalItems;
-    }
-
-    public int getTotalPages() {
-        return totalPages;
-    }
-
-    public void setTotalPages(int totalPages) {
         this.totalPages = totalPages;
-    }
-
-    public boolean isHasNext() {
-        return hasNext;
-    }
-
-    public void setHasNext(boolean hasNext) {
         this.hasNext = hasNext;
+        this.hasPrevious = hasPrevious;
+        this.isFirst = isFirst;
+        this.isLast = isLast;
     }
 
-    public boolean isHasPrev() {
-        return hasPrev;
-    }
-
-    public void setHasPrev(boolean hasPrev) {
-        this.hasPrev = hasPrev;
-    }
 
     public static <S, T> PaginatedResponse<T> from(Page<S> pageData, Function<S, T> mapper) {
-        PaginatedResponse<T> paginatedResponse = new PaginatedResponse<>();
-        paginatedResponse.items = pageData.getContent().stream().map(mapper).toList();
-        paginatedResponse.page = pageData.getNumber();
-        paginatedResponse.size = pageData.getSize();
-        paginatedResponse.totalItems = pageData.getTotalElements();
-        paginatedResponse.totalPages = pageData.getTotalPages();
-        paginatedResponse.hasNext = pageData.hasNext();
-        paginatedResponse.hasPrev = pageData.hasPrevious();
-        return paginatedResponse;
+        List<T> items = pageData.getContent().stream().map(mapper).collect(Collectors.toList());
 
+        return new PaginatedResponse<>(items, pageData.getNumber() + 1, // Convertir a 1-based index
+                pageData.getSize(), pageData.getTotalElements(), pageData.getTotalPages(),
+                pageData.hasNext(), pageData.hasPrevious(), pageData.isFirst(), pageData.isLast());
+    }
+
+
+    public static <T> PaginatedResponse<T> from(Page<T> pageData) {
+        return from(pageData, Function.identity());
+    }
+
+    public static <T> PaginatedResponse<T> of(List<T> items, int currentPage, int pageSize,
+            long totalItems, int totalPages) {
+        boolean hasPrevious = currentPage > 1;
+        boolean hasNext = currentPage < totalPages;
+        boolean isFirst = currentPage == 1;
+        boolean isLast = currentPage == totalPages || totalPages == 0;
+
+        return new PaginatedResponse<>(items, currentPage, pageSize, totalItems, totalPages,
+                hasNext, hasPrevious, isFirst, isLast);
     }
 }
